lang/src/ast/snapshots/rain_lang__ast__parser__test__record_constructor_nls.snap
---
source: lang/src/ast/parser.rs
expression: "parse_display_expr(\"{\\na: b, \\n c: 4\\n}\")"
---
Record(
 RecordEntry(
  a
  Ident(
   b
  )
 )
 RecordEntry(
  c
  IntegerLiteral(
   4
  )
 )
)
