lang/src/ast/snapshots/rain_lang__ast__parser__test__string_literal.snap
---
source: lang/src/ast/parser.rs
expression: "parse_display_expr(\"\\\"asldjf\\\"\")"
---
StringLiteral(
 asldjf
)
